--- a/index.html
+++ b/index.html
@@ -1,55 +1,30 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
+    <title>ATARI EMPIRE</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ATARI EMPIRE | 60 Retro Games</title>
     <style>
-        :root { --neon: #39ff14; --bg: #050505; --card: #111; }
-        body { background: var(--bg); color: var(--neon); font-family: 'Courier New', monospace; margin: 0; text-align: center; }
-        header { padding: 40px; border-bottom: 2px double var(--neon); background: #000; }
-        h1 { font-size: 3rem; margin: 0; text-shadow: 0 0 10px var(--neon); }
-        .ad-space { width: 95%; max-width: 728px; height: 90px; background: #1a1a1a; margin: 20px auto; border: 1px dashed #444; display: flex; align-items: center; justify-content: center; color: #444; font-size: 12px; }
-        .grid { display: grid; grid-template-columns: repeat(auto-fill, minmax(220px, 1fr)); gap: 25px; padding: 40px; max-width: 1300px; margin: 0 auto; }
-        .game-card { background: var(--card); border: 2px solid #333; padding: 25px; text-decoration: none; color: #fff; transition: 0.3s; display: flex; flex-direction: column; justify-content: center; height: 140px; border-radius: 4px; }
-        .game-card:hover { border-color: var(--neon); box-shadow: 0 0 25px var(--neon); transform: translateY(-5px); color: var(--neon); }
-        .game-card h3 { margin: 0 0 10px 0; font-size: 1.2rem; text-transform: uppercase; letter-spacing: 1px; }
-        .game-card p { font-size: 0.85rem; opacity: 0.7; margin: 0; font-style: italic; }
-        footer { padding: 40px; color: #444; font-size: 10px; border-top: 1px solid #111; }
+        body { background: #000; color: #39ff14; font-family: 'Courier New', monospace; text-align: center; margin: 0; padding: 10px; }
+        h1 { text-shadow: 0 0 15px #39ff14; margin-bottom: 5px; }
+        .grid { display: grid; grid-template-columns: repeat(auto-fill, minmax(140px, 1fr)); gap: 10px; padding: 10px; }
+        .card { border: 2px solid #39ff14; padding: 15px; text-decoration: none; color: inherit; transition: 0.2s; background: rgba(57, 255, 20, 0.05); }
+        .card:hover { background: #39ff14; color: #000; box-shadow: 0 0 20px #39ff14; }
     </style>
 </head>
 <body>
-
-    <header>
-        <h1>ATARI EMPIRE</h1>
-        <p style="letter-spacing: 2px;">PHASE 1: 60 AI-GENERATED ARCADE GAMES</p>
-    </header>
-
-    <div class="ad-space" id="top-banner-ad">
-        ADVERTISEMENT SLOT (728x90)
-    </div>
-
-    <div class="grid" id="game-list">
-        </div>
-
-    <footer>&copy; 2026 ATARI EMPIRE CLOUD ENGINE - ALL SYSTEMS NOMINAL</footer>
-
+    <h1>ATARI EMPIRE</h1>
+    <p>60 MOBILE-READY ARCADE GAMES</p>
+    <div class="grid" id="menu"></div>
     <script src="games.js"></script>
-
     <script>
-        const container = document.getElementById('game-list');
-        
-        // Safety check to ensure games.js loaded correctly
-        if (typeof gameData !== 'undefined') {
-            container.innerHTML = gameData.map(game => `
-                <a href="${game.link}" class="game-card">
-                    <h3>${game.title}</h3>
-                    <p>${game.desc}</p>
-                </a>
-            `).join('');
-        } else {
-            container.innerHTML = "<h2 style='color:red;'>CRITICAL ERROR: games.js file not found in main folder!</h2>";
-        }
+        const menu = document.getElementById('menu');
+        gameData.forEach(game => {
+            const a = document.createElement('a');
+            a.className = 'card';
+            a.href = game.link;
+            a.innerHTML = `<strong>${game.title}</strong><br><small>${game.desc}</small>`;
+            menu.appendChild(a);
+        });
     </script>
 </body>
 </html>
